Feat : Switch to VirtualThreads (#972)
* Feat : Switch to VirtualThreads

* Attempt to fix

* fix package lock file

* fix